ci: fix the code coverage report issue of previoud build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,8 @@ jobs:
       - uses: ./.github/actions/setup-node
       - name: Test
         run: pnpm run test
+      - name: Collect lcov
+        run: pnpm run lcov:collect
       - name: Setup LCOV
         uses: hrishikesh-kadam/setup-lcov@v1
       - name: Report code coverage
