--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -51,19 +51,16 @@ jobs:
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         id: pnpm-install
-
       - name: Use Node.js LTS
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
           cache: 'pnpm'
-
       - name: Get pnpm store directory
         id: pnpm-cache
         shell: bash
         run: |
           echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-
       - uses: actions/cache@v3
         name: Setup pnpm cache
         with:
@@ -73,32 +70,27 @@ jobs:
             ${{ runner.os }}-pnpm-store-
       - name: Install dependencies
         run: pnpm install
-
       - name: Download Previous Size Data
         uses: dawidd6/action-download-artifact@v2
         with:
           name: size-data
           path: temp/size-prev
           if_no_artifact_found: warn
-
       - run: pnpm size:generate
-
       - name: Upload Size Data
         uses: actions/upload-artifact@v3
         with:
           name: size-data
           path: temp/size
-
       - name: Read Size Report
         id: size-report
         uses: juliangruber/read-file-action@v1
         with:
           path: ./size-report.md
-
-      # - name: Create commit comment
-      #   uses: peter-evans/commit-comment@v2
-      #   with:
-      #     body: ${{ steps.size-report.outputs.content }}
+      - name: Create commit comment
+        uses: peter-evans/commit-comment@v2
+        with:
+          body: ${{ steps.size-report.outputs.content }}
 
   trivy-scan:
     runs-on: ubuntu-latest
