--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -36,23 +36,20 @@
     "test": "wireit",
     "test:watch": "wireit"
   },
-  "dependencies": {
-    "colorette": "^2.0.20",
-    "escalade": "^3.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.2",
     "@size-limit/file": "^9.0.0",
     "@templ/config": "workspace:^",
     "@templ/docs": "workspace:^",
-    "@types/node": "^20.6.3",
+    "@types/node": "^20.6.5",
     "@vitest/coverage-v8": "^0.34.5",
     "eslint": "^8.50.0",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "size-limit": "^9.0.0",
     "tsup": "^7.2.0",
-    "tsx": "^3.12.10",
+    "tsx": "^3.13.0",
     "typedoc": "^0.25.1",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.5",
