chore: initial knip changes

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "create:pkg": "pnpm -C scripts create:pkg",
     "deps:update": "taze -r -w -i",
     "preinstall": "npx only-allow pnpm",
-    "lint": "pnpm lint:eslint && pnpm lint:md && pnpm pnpm lint:secret && pnpm lint:size && pnpm lint:spell",
+    "lint": "pnpm lint:eslint && pnpm lint:knip && pnpm lint:md && pnpm pnpm lint:secret && pnpm lint:size && pnpm lint:spell",
     "lint:eslint": "pnpm -r eslint",
+    "lint:knip": "knip --no-gitignore",
     "lint:md": "pnpm -C scripts lint:md",
     "lint:secret": "secretlint --secretlintignore .gitignore \"**/*\"",
     "lint:size": "pnpm -r lint:size",
@@ -45,6 +46,7 @@
     "cspell": "^7.3.6",
     "envinfo": "^7.10.0",
     "husky": "^8.0.3",
+    "knip": "^2.27.1",
     "nano-staged": "^0.8.0",
     "pnpm": "^8.7.6",
     "rimraf": "^5.0.1",
