--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ fixtures/output/*
 /tools/lib-cov
 
 # docs
-packages/**/docs
+app/**/docs
 docs/.vitepress/dist
 docs/.vitepress/cache
+*size-report.md
