--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,8 +32,8 @@
   ],
   "scripts": {
     "build": "wireit",
-    "clean": "wireit",
-    "eslint": "wireit",
+    "clean": "rimraf .eslintcache .wireit dist coverage",
+    "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
     "lint:size": "wireit",
     "test": "wireit",
     "test:cli": "wireit",
@@ -45,9 +45,8 @@
     "serialize-error": "^11.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.2",
+    "@antfu/eslint-config": "1.0.0-beta.10",
     "@size-limit/file": "^9.0.0",
-    "@templ/config": "workspace:^",
     "@types/node": "^20.7.0",
     "@vitest/coverage-v8": "^0.34.5",
     "eslint": "^8.50.0",
@@ -79,16 +78,6 @@
           "script": "../config:build",
           "cascade": false
         }
-      ]
-    },
-    "clean": {
-      "command": "rimraf .eslintcache .wireit dist docs coverage"
-    },
-    "eslint": {
-      "command": "eslint --color --cache --fix --cache-location .eslintcache .",
-      "files": [
-        "src/**/*.ts",
-        "eslint.config.js"
       ]
     },
     "lint:size": {
@@ -127,7 +116,8 @@
   "size-limit": [
     {
       "path": "dist/index.js",
-      "limit": "1KB"
+      "limit": "1KB",
+      "brotli": true
     }
   ]
 }
