--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -27,8 +27,8 @@
   ],
   "scripts": {
     "build": "wireit",
-    "clean": "wireit",
-    "eslint": "wireit",
+    "clean": "rimraf .eslintcache .wireit dist docs coverage",
+    "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
     "lint:size": "wireit",
     "test": "wireit",
     "test:watch": "wireit"
@@ -40,9 +40,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.2",
+    "@antfu/eslint-config": "1.0.0-beta.10",
     "@size-limit/file": "^9.0.0",
-    "@templ/logger": "workspace:^",
     "@types/node": "^20.7.0",
     "@vitest/coverage-v8": "^0.34.5",
     "eslint": "^8.50.0",
@@ -69,16 +68,6 @@
           "script": "../logger:build",
           "cascade": false
         }
-      ]
-    },
-    "clean": {
-      "command": "rimraf .eslintcache .wireit dist docs coverage"
-    },
-    "eslint": {
-      "command": "eslint --color --cache --fix --cache-location .eslintcache .",
-      "files": [
-        "src/**/*.ts",
-        "eslint.config.js"
       ]
     },
     "lint:size": {
@@ -111,7 +100,8 @@
   "size-limit": [
     {
       "path": "dist/index.js",
-      "limit": "2KB"
+      "limit": "2KB",
+      "brotli": true
     }
   ]
 }
