--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,17 +27,15 @@
   ],
   "scripts": {
     "build": "wireit",
-    "clean": "wireit",
-    "eslint": "wireit",
+    "clean": "rimraf .eslintcache .wireit dist docs coverage",
+    "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
     "lint:size": "wireit",
     "test": "wireit",
     "test:watch": "wireit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.2",
+    "@antfu/eslint-config": "1.0.0-beta.10",
     "@size-limit/file": "^9.0.0",
-    "@templ/config": "workspace:^",
-    "@templ/utils": "workspace:^",
     "@types/node": "^20.7.0",
     "@vitest/coverage-v8": "^0.34.5",
     "eslint": "^8.50.0",
@@ -64,16 +62,6 @@
           "script": "../config:build",
           "cascade": false
         }
-      ]
-    },
-    "clean": {
-      "command": "rimraf .eslintcache .wireit dist docs coverage"
-    },
-    "eslint": {
-      "command": "eslint --color --cache --fix --cache-location .eslintcache .",
-      "files": [
-        "src/**/*.ts",
-        "eslint.config.js"
       ]
     },
     "lint:size": {
@@ -106,7 +94,8 @@
   "size-limit": [
     {
       "path": "dist/index.js",
-      "limit": "100B"
+      "limit": "100B",
+      "brotli": true
     }
   ]
 }
