--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -27,8 +27,8 @@
   ],
   "scripts": {
     "build": "wireit",
-    "clean": "wireit",
-    "eslint": "wireit",
+    "clean": "rimraf .eslintcache .wireit dist docs coverage",
+    "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
     "lint:size": "wireit",
     "test": "wireit",
     "test:watch": "wireit"
@@ -37,8 +37,6 @@
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.2",
     "@size-limit/file": "^9.0.0",
-    "@templ/config": "workspace:^",
-    "@templ/docs": "workspace:^",
     "@types/node": "^20.7.0",
     "@vitest/coverage-v8": "^0.34.5",
     "eslint": "^8.50.0",
@@ -65,16 +63,6 @@
           "script": "../config:build",
           "cascade": false
         }
-      ]
-    },
-    "clean": {
-      "command": "rimraf .eslintcache .wireit dist docs coverage"
-    },
-    "eslint": {
-      "command": "eslint --color --cache --fix --cache-location .eslintcache .",
-      "files": [
-        "src/**/*.ts",
-        "eslint.config.js"
       ]
     },
     "lint:size": {
@@ -107,7 +95,8 @@
   "size-limit": [
     {
       "path": "dist/index.js",
-      "limit": "700B"
+      "limit": "700B",
+      "brotli": true
     }
   ]
 }
