--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -27,11 +27,8 @@
   ],
   "scripts": {
     "build": "wireit",
-    "clean": "wireit",
-    "dev": "wireit",
-    "build:docs": "wireit",
-    "docs:preview": "wireit",
-    "eslint": "wireit",
+    "clean": "rimraf .eslintcache .wireit dist docs coverage",
+    "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
     "lint:size": "wireit",
     "test": "wireit",
     "test:watch": "wireit"
@@ -42,17 +39,14 @@
     "serialize-error": "^11.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.2",
+    "@antfu/eslint-config": "1.0.0-beta.10",
     "@size-limit/file": "^9.0.0",
-    "@types/node": "^20.6.5",
+    "@types/node": "^20.7.0",
     "@vitest/coverage-v8": "^0.34.5",
     "eslint": "^8.50.0",
-    "rimraf": "^5.0.1",
-    "sirv-cli": "^2.0.2",
+    "rimraf": "^5.0.4",
     "size-limit": "^9.0.0",
     "tsup": "^7.2.0",
-    "tsx": "^3.13.0",
-    "typedoc": "^0.25.1",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.5",
     "wireit": "^0.14.0"
@@ -67,41 +61,6 @@
       ],
       "output": [
         "dist/**"
-      ]
-    },
-    "clean": {
-      "command": "rimraf .eslintcache .wireit dist docs coverage"
-    },
-    "dev": {
-      "command": "tsx ./src/index.ts --watch",
-      "files": [
-        "src/**/*.ts",
-        "tsconfig.json"
-      ]
-    },
-    "build:docs": {
-      "command": "typedoc src/index.ts",
-      "output": [
-        "docs/**"
-      ],
-      "dependencies": [
-        "build"
-      ]
-    },
-    "docs:preview": {
-      "command": "sirv docs",
-      "files": [
-        "src/**"
-      ],
-      "dependencies": [
-        "build:docs"
-      ]
-    },
-    "eslint": {
-      "command": "eslint --color --cache --fix --cache-location .eslintcache .",
-      "files": [
-        "src/**/*.ts",
-        "eslint.config.js"
       ]
     },
     "lint:size": {
@@ -134,7 +93,8 @@
   "size-limit": [
     {
       "path": "dist/index.js",
-      "limit": "10KB"
+      "limit": "10KB",
+      "brotli": true
     }
   ]
 }
