--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
+  "engines": {
+    "node": "^18.8.0 || >=20.6.0"
+  },
   "scripts": {
     "clean": "rimraf .vitepress .wireit",
     "build": "wireit",
