--- a/scripts/package.json
+++ b/scripts/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
+  "engines": {
+    "node": "^18.8.0 || >=20.6.0"
+  },
   "scripts": {
     "clean": "rimraf .eslintcache .wireit",
     "clean:nm": "wireit",
@@ -30,17 +33,17 @@
     "@templ/utils": "workspace:^",
     "fast-glob": "^3.3.1",
     "markdown-table": "^3.0.3",
-    "rollup": "^3.29.3",
+    "rollup": "^3.29.4",
     "terser": "^5.20.0",
     "totalist": "^3.0.1",
-    "type-fest": "^4.3.1"
+    "type-fest": "^4.3.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.10",
-    "@types/node": "^20.7.0",
+    "@types/node": "^20.7.2",
     "eslint": "^8.50.0",
     "markdownlint": "^0.31.1",
-    "rimraf": "^5.0.4",
+    "rimraf": "^5.0.5",
     "tempura": "^0.4.0",
     "tsx": "^3.13.0",
     "wireit": "^0.14.0",
