--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cspell": "^7.3.7",
     "envinfo": "^7.10.0",
     "husky": "^8.0.3",
-    "knip": "^2.30.0",
+    "knip": "^2.30.1",
     "nano-staged": "^0.8.0",
     "pnpm": "^8.8.0",
     "rimraf": "^5.0.5",
@@ -77,25 +77,62 @@
   "knip": {
     "workspaces": {
       "packages/*": {
-        "entry": ["**/*.ts", "**/*.config.js", "tsup.config.ts"],
-        "ignore": ["**/dist/*.js"]
+        "entry": [
+          "**/*.ts",
+          "**/*.config.js",
+          "tsup.config.ts"
+        ],
+        "ignore": [
+          "**/dist/*.js"
+        ]
       },
       "packages/api/services/*": {
-        "entry": ["**/*.ts", "**/*.config.js"],
-        "ignore": ["**/dist/**/*.js"]
+        "entry": [
+          "**/*.ts",
+          "**/*.config.js"
+        ],
+        "ignore": [
+          "**/dist/**/*.js"
+        ]
       },
       "packages/cli": {
-        "entry": ["**/*.ts", "!*.mjs"],
-        "ignore": ["*.mjs", "**/dist/*.js"]
+        "entry": [
+          "**/*.ts",
+          "!*.mjs"
+        ],
+        "ignore": [
+          "*.mjs",
+          "**/dist/*.js"
+        ]
       },
       "scripts": {
-        "entry": ["**/*.ts"],
-        "ignore": ["**/_templates"]
+        "entry": [
+          "**/*.ts"
+        ],
+        "ignore": [
+          "**/_templates"
+        ]
       }
     },
-    "ignoreBinaries": ["eslint", "only-allow"],
-    "ignoreDependencies": ["vitepress", "@secretlint/secretlint-rule-preset-recommend", "nano-staged", "size-limit", "tsx", "@size-limit/file"],
-    "ignore": ["**/.wireit", "**/.vitepress", "**/fixtures/**", "**/coverage", "taze.config.js"]
+    "ignoreBinaries": [
+      "eslint",
+      "only-allow"
+    ],
+    "ignoreDependencies": [
+      "vitepress",
+      "@secretlint/secretlint-rule-preset-recommend",
+      "nano-staged",
+      "size-limit",
+      "tsx",
+      "@size-limit/file"
+    ],
+    "ignore": [
+      "**/.wireit",
+      "**/.vitepress",
+      "**/fixtures/**",
+      "**/coverage",
+      "taze.config.js"
+    ]
   },
   "packageManager": "pnpm@8.8.0",
   "stackblitz": {
