--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - name: Build
-        run: pnpm run build
+        run: |
+          pnpm run ci:copy:env
+          pnpm run build
+          pnpm run ci:delete:env
 
   test:
     runs-on: ubuntu-latest
