--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "changelog": "auto-changelog -p",
     "create:pkg": "pnpm -C scripts create:pkg",
     "deps:update": "taze -r -w -i",
+    "ci:copy:env": "pnpm -C scripts ci:copy:env",
+    "ci:delete:env": "pnpm -C scripts ci:delete:env",
     "preinstall": "npx only-allow pnpm",
     "lint": "pnpm lint:eslint && pnpm lint:knip && pnpm lint:md && pnpm pnpm lint:secret && pnpm lint:size && pnpm lint:spell",
     "lint:eslint": "pnpm -r eslint",
