--- a/scripts/package.json
+++ b/scripts/package.json
@@ -20,6 +20,8 @@
   "scripts": {
     "clean": "rimraf .eslintcache .wireit",
     "clean:nm": "wireit",
+    "ci:copy:env": "wireit",
+    "ci:delete:env": "wireit",
     "create:pkg": "wireit",
     "eslint:fix": "eslint . --fix",
     "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
@@ -47,7 +49,7 @@
     "tempura": "^0.4.0",
     "tsx": "^3.13.0",
     "wireit": "^0.14.0",
-    "zod": "^3.22.3"
+    "zod": "^3.22.4"
   },
   "wireit": {
     "clean:nm": {
@@ -60,6 +62,30 @@
           "script": "../packages/logger:build",
           "cascade": false
         },
+        {
+          "script": "../packages/utils:build",
+          "cascade": false
+        }
+      ]
+    },
+    "ci:copy:env": {
+      "command": "node --loader tsx ./src/ci/copy-env.ts",
+      "files": [
+        "src/ci/copy-env.ts"
+      ],
+      "dependencies": [
+        {
+          "script": "../packages/utils:build",
+          "cascade": false
+        }
+      ]
+    },
+    "ci:delete:env": {
+      "command": "node --loader tsx ./src/ci/delete-env.ts",
+      "files": [
+        "src/ci/delete-env.ts"
+      ],
+      "dependencies": [
         {
           "script": "../packages/utils:build",
           "cascade": false
