--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,17 +7,17 @@ tasks:
 
 vscode:
   extensions:
-    - "aaron-bond.better-comments"
-    - "codecov.codecov"
-    - "davidanson.vscode-markdownlint"
-    - "eamodio.gitlens"
-    - "editorconfig.editorconfig"
-    - "esbenp.prettier-vscode"
-    - "folke.vscode-monorepo-workspace"
-    - "google.wireit"
-    - "foxundermoon.shell-format"
-    - "mintlify.document"
-    - "ms-playwright.playwright"
-    - "seatonjiang.gitmoji-vscode"
-    - "streetsidesoftware.code-spell-checker"
-    - "zixuanchen.vitest-explorer"
+    - aaron-bond.better-comments
+    - codecov.codecov
+    - davidanson.vscode-markdownlint
+    - eamodio.gitlens
+    - editorconfig.editorconfig
+    - esbenp.prettier-vscode
+    - folke.vscode-monorepo-workspace
+    - google.wireit
+    - foxundermoon.shell-format
+    - mintlify.document
+    - ms-playwright.playwright
+    - seatonjiang.gitmoji-vscode
+    - streetsidesoftware.code-spell-checker
+    - zixuanchen.vitest-explorer
