--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,7 @@
 ---
 name: 🚀 New feature proposal
 description: Propose a new feature to be added to TEMPL
-labels: ["enhancement: pending triage"]
+labels: ['enhancement: pending triage']
 body:
   - type: markdown
     attributes:
@@ -11,7 +11,7 @@ body:
     id: feature-description
     attributes:
       label: Clear and concise description of the problem
-      description: "As a developer using TEMPL I want [goal / wish] so that [benefit]. If you intend to submit a PR for this issue, tell us in the description. Thanks!"
+      description: 'As a developer using TEMPL I want [goal / wish] so that [benefit]. If you intend to submit a PR for this issue, tell us in the description. Thanks!'
     validations:
       required: true
   - type: textarea
