--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -17,7 +17,7 @@ runs:
     - name: Set node version to ${{ inputs.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version-file: ".nvmrc"
+        node-version-file: .nvmrc
         node-version: ${{ inputs.node-version }}
 
     - name: Resolve package versions
