--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
-    needs: ['clean']
+    needs: [clean]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -38,7 +38,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: ['clean']
+    needs: [clean]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -47,7 +47,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: ['build']
+    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -66,7 +66,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node_version: [18]
       fail-fast: false
-    needs: ['build']
+    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -80,7 +80,7 @@ jobs:
     if: github.actor != 'dependabot[bot]'
     permissions:
       contents: write
-    needs: ['lint', 'build']
+    needs: [lint, build]
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
@@ -89,8 +89,8 @@ jobs:
       - name: Use Node.js LTS
         uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
-          cache: 'pnpm'
+          node-version-file: .nvmrc
+          cache: pnpm
       - name: Get pnpm store directory
         id: pnpm-cache
         shell: bash
@@ -150,9 +150,9 @@ jobs:
       - name: Run Trivy vulnerability scanner in fs mode
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "."
-          scan-type: "fs"
-          scan-ref: "."
-          skip-dirs: "third_party"
-          output: "dependency-results.sbom.json"
+          image-ref: .
+          scan-type: fs
+          scan-ref: .
+          skip-dirs: third_party
+          output: dependency-results.sbom.json
           github-pat: ${{ secrets.GITHUB_TOKEN }}
