--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,7 +1,7 @@
-name: "Close stale issues and PR"
+name: Close stale issues and PR
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
 
 permissions:
   contents: write
@@ -14,9 +14,9 @@ jobs:
     steps:
       - uses: actions/stale@v8
         with:
-          stale-issue-message: "This issue is stale because it has been open 30 days with no activity. Remove stale label or comment or this will be closed in 5 days."
-          stale-pr-message: "This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 10 days."
-          close-issue-message: "This issue was closed because it has been stalled for 5 days with no activity."
+          stale-issue-message: This issue is stale because it has been open 30 days with no activity. Remove stale label or comment or this will be closed in 5 days.
+          stale-pr-message: This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 10 days.
+          close-issue-message: This issue was closed because it has been stalled for 5 days with no activity.
           days-before-stale: 30
           days-before-close: 5
           days-before-pr-close: -1
@@ -28,10 +28,10 @@ jobs:
       - uses: dessant/lock-threads@v4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-inactive-days: "14"
+          issue-inactive-days: '14'
           issue-comment: |
             This issue has been locked since it has been closed for more than 14 days.
 
             If you have found a concrete bug or regression related to it, please open a new [bug report](https://github.com/rjoydip/templ/issues/new/choose) with a reproduction against the latest TEMPL version. If you have any other comments you should create a new [discussion](https://github.com/rjoydip/templ/discussions).
-          issue-lock-reason: ""
+          issue-lock-reason: ''
           process-only: issues
