--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,8 +32,7 @@
   ],
   "scripts": {
     "build": "wireit",
-    "clean": "rimraf .eslintcache .wireit dist coverage",
-    "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
+    "clean": "rimraf .wireit dist coverage",
     "lint:size": "wireit",
     "test": "wireit",
     "test:cli": "wireit",
@@ -45,7 +44,6 @@
     "serialize-error": "^11.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.10",
     "@size-limit/file": "^9.0.0",
     "@types/node": "^20.7.0",
     "@vitest/coverage-v8": "^0.34.5",
