--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -27,8 +27,7 @@
   ],
   "scripts": {
     "build": "wireit",
-    "clean": "rimraf .eslintcache .wireit dist docs coverage",
-    "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
+    "clean": "rimraf .wireit dist docs coverage",
     "lint:size": "wireit",
     "test": "wireit",
     "test:watch": "wireit"
@@ -40,11 +39,9 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.10",
     "@size-limit/file": "^9.0.0",
     "@types/node": "^20.7.0",
     "@vitest/coverage-v8": "^0.34.5",
-    "eslint": "^8.50.0",
     "rimraf": "^5.0.4",
     "size-limit": "^9.0.0",
     "tsup": "^7.2.0",
