--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -25,6 +25,9 @@
     "*.d.ts",
     "dist"
   ],
+  "engines": {
+    "node": "^18.8.0 || >=20.6.0"
+  },
   "scripts": {
     "build": "wireit",
     "clean": "rimraf .eslintcache .wireit dist docs coverage",
@@ -41,14 +44,14 @@
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.10",
     "@size-limit/file": "^9.0.0",
-    "@types/node": "^20.7.0",
-    "@vitest/coverage-v8": "^0.34.5",
+    "@types/node": "^20.8.2",
+    "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.50.0",
-    "rimraf": "^5.0.4",
+    "rimraf": "^5.0.5",
     "size-limit": "^9.0.0",
     "tsup": "^7.2.0",
     "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^0.34.5",
+    "vitest": "^0.34.6",
     "wireit": "^0.14.0"
   },
   "wireit": {
