--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Lint All
         run: pnpm run clean
 
-  build:
+  build_lint:
     runs-on: ubuntu-latest
     needs: [clean]
     steps:
@@ -36,17 +36,12 @@ jobs:
           pnpm run ci:copy:env
           pnpm run build
           pnpm run ci:delete:env
-
-  lint:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
       - name: Lint All
         run: pnpm run lint
 
   test:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build_lint]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -65,7 +60,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node_version: [18]
       fail-fast: false
-    needs: [build]
+    needs: [build_lint]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -79,7 +74,7 @@ jobs:
     if: github.actor != 'dependabot[bot]'
     permissions:
       contents: write
-    needs: [lint, build]
+    needs: [build_lint]
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
