--- a/package.json
+++ b/package.json
@@ -15,25 +15,20 @@
     "yarn": "This project is configured to use pnpm"
   },
   "scripts": {
-    "all": "pnpm clean && pnpm deps:update && pnpm lint && pnpm changelog && pnpm build && pnpm size:generate && pnpm test:all && pnpm system:info && pnpm update:third_party",
+    "all": "pnpm clean && pnpm deps:update && pnpm lint && pnpm changelog && pnpm build && pnpm -C scripts size:generate && pnpm test:all && pnpm system:info && pnpm update:third_party",
     "build": "pnpm -r build",
     "clean": "pnpm -r clean && trash .pnpm-store coverage temp && empty-trash",
     "changelog": "auto-changelog -p",
-    "ci:delete:env": "pnpm -C scripts ci:delete:env",
     "create:pkg": "pnpm -C scripts create:pkg",
     "deps:update": "taze -r -w -i",
-    "ci:copy:env": "pnpm -C scripts ci:copy:env",
     "eslint:viewer": "eslint-flat-config-viewer",
-    "preinstall": "npx only-allow pnpm",
-    "lint": "pnpm lint:eslint && pnpm lint:knip && pnpm lint:md && pnpm lint:secret && pnpm lint:size && pnpm lint:spell",
-    "lint:eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
-    "lint:knip": "knip --no-gitignore --no-exit-code",
-    "lint:md": "pnpm -C scripts lint:md",
-    "lint:secret": "secretlint --secretlintignore .gitignore \"**/*\"",
-    "lint:size": "size-limit",
-    "lint:spell": "cspell .",
     "prepare": "husky install",
-    "size:generate": "pnpm -C scripts size:generate",
+    "preinstall": "npx only-allow pnpm",
+    "lint": "pnpm lint:eslint && knip --no-gitignore --no-exit-code && pnpm lint:md && pnpm lint:secret && size-limit && pnpm lint:spell",
+    "lint:md": "pnpm -C scripts lint:md",
+    "lint:eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
+    "lint:secret": "secretlint --secretlintignore .gitignore \"**/*\" ",
+    "lint:spell": "cspell .",
     "system:info": "envinfo --system --binaries --browsers",
     "test": "pnpm -r test",
     "test:all": "pnpm test && pnpm test:cli",
@@ -43,7 +38,8 @@
   "workspaces": [
     "apps/**",
     "packages/**",
-    "scripts"
+    "scripts",
+    "third_party/**"
   ],
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.24",
@@ -58,7 +54,7 @@
     "eslint": "^8.51.0",
     "eslint-flat-config-viewer": "^0.1.0",
     "husky": "^8.0.3",
-    "knip": "^2.32.4",
+    "knip": "^2.33.0",
     "nano-staged": "^0.8.0",
     "pnpm": "^8.9.0",
     "secretlint": "^7.0.7",
