--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,43 +78,15 @@ jobs:
       contents: write
     needs: [build_lint]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
-        with:
-          version: 8
-          run_install: false
-
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install dependencies
-        run: pnpm install
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-node
       - name: Download Previous Size Data
         uses: dawidd6/action-download-artifact@v2
         with:
           name: size-data
           path: temp/size-prev
           if_no_artifact_found: warn
-      - run: pnpm size:generate
+      - run: pnpm -C scripts size:generate
       - name: Upload Size Data
         uses: actions/upload-artifact@v3
         with:
